--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.5"
+    "mongoose": "^5.10.5",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
