encriptado de contraseña e implementacion de JWT

--- a/src/config/dev.env
+++ b/src/config/dev.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://fedeicowalovnik:XwvVDNb9IUyffAJQ@chistesdb.xvrq4.mongodb.net/chistesDB?retryWrites=true&w=majority
 PORT=3001
+JWT_SECRET=AsdAsdf544
